feat(plugin): add Java 16+ warning